--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -186,7 +186,7 @@ header {
 
 }
 
-article img {
+.product img {
     border-bottom: 1px solid #ebebeb;
     width: 100%;
 
@@ -256,6 +256,8 @@ article img {
     margin-left: auto;
     padding: 5px;
     width: 65%;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
@@ -287,19 +289,6 @@ article img {
 
 }
 
-.form__nombre input:invalid {
-    border: 2px solid red;
-  }
-  
-  .form__nombre input:valid {
-    border: 2px solid #39b54a;
-  }
-  .form__nombre input:focus{
-outline: none
-
-
-  }
-
 
 .form__usuario {
     margin-bottom: 20px;
@@ -328,24 +317,6 @@ outline: none
     
 
 }
-.form__usuario input:invalid {
-    border: 2px solid red;
-  }
-  
-  .form__usuario input:valid {
-    border: 2px solid #39b54a;
-  }
-  .form__usuario input:focus{
-outline: none
-
-
-  }
-
-
-
-
-
-
 
   .form__fecha input {
     border-radius: 7px;
@@ -528,6 +499,40 @@ padding: 10px 20px;
 display: flex;
 justify-content: space-around;
 }
+.form-Reg input:hover{
+
+    box-shadow: 0 0 5px 0 #095484;
+
+}
+.form-Reg input{
+    outline: none;
+}
+
+.form-Reg label:hover  {
+    color: #095484;
+    }
+
+    .form__button:hover {
+        background-color: #0666a3;
+        }
+        .form-Reg input[type="text"]:focus:required:valid{
+            border:2px solid green;
+        }
+        .form-Reg input[type="text"]:required:invalid{
+            border:2px solid red;
+            }
+
+.form-reg input[type="date"]:focus:required:valid{
+    border:2px solid green;
+   
+}
+.form-reg input[type="date"]:required:invalid{
+    border:2px solid red;
+    
+}
+
+
+            
 
 
 
@@ -589,6 +594,29 @@ justify-content: space-around;
     width: 90%;
     
 }
+.form-login input:hover{
+
+    box-shadow: 0 0 5px 0 #095484;
+
+}
+.form-login input{
+    outline: none;
+}
+
+.form-login label:hover  {
+    color: #095484;
+    }
+
+    .button-login:hover {
+        background-color: #0666a3;
+        }       
+
+        .form-login input[type="text"]:focus:required:valid{
+            border:2px solid green;
+        }
+        .form-login input[type="text"]:required:invalid{
+            border:2px solid red;
+}
 
 /*---------------------------------------------------LOGIN-------------------------------------------*/
 
@@ -611,7 +639,7 @@ footer {
     text-align: center;
 }
 
-footer section p {
+.section-paga__p{
     color: #666;
     margin-bottom: 50px;
     margin-left: 1px;
@@ -621,7 +649,7 @@ footer section p {
     padding-right: 30px;
 }
 
-footer h2 {
+.footer h2 {
     color: #666;
     margin-bottom: 0px;
     margin-top: 10px;
@@ -649,7 +677,7 @@ footer h2 {
         display: block;
     }
 
-    main h3 {
+    .main-index h3 {
 
         display: block;
 
@@ -746,7 +774,7 @@ footer h2 {
         margin: 0 4px
     }
 
-    main h3 {
+    .main-index h3 {
 
         display: block;
 
