--- a/views/register.html
+++ b/views/register.html
@@ -81,11 +81,11 @@
 
             <div class="form__nombre">
                 <label for="nombre">Nombre y Apellido</label>
-                <input type="text" name="Nombre" id="nombre" placeholder=" Introduzca su Nombre y apellido" required >
+                <input type="text" name="Nombre" id="nombre" placeholder=" Introduzca su Nombre y apellido" minlength="2" required >
             </div>
             <div class="form__usuario">
                 <label for="usuario">Nombre de usuari@</label>
-                <input type="text" name="usuario" id="usuario" placeholder="Introduzca su Nombre de usuari@" required >
+                <input type="text" name="usuario" id="usuario" placeholder="Introduzca su Nombre de usuari@" minlength="2" required >
             </div>
             <div class="form__fecha">
                 <label for="fecha">Fecha de nacimiento</label>
@@ -97,11 +97,11 @@
                 <input type="text" name="domicilio" id="domicilio" placeholder=" Introduzca su Domicilio" required>
             </div>
             <div class="form__perfil">
-                <label for="domicilio" class="form__perfil__title">Perfil del usuario</label>
+                <label for="domicilio" class="form__perfil__title" required      >Perfil del usuario</label>
                 <div class="compr-vend">
                     <div class="form-check-compr">
-                        <input type="radio" name="venta-compra" id="comprador">
-                        <label for="comprador">Comprador</label>
+                        <input type="radio" name="venta-compra" id="comprador" required>
+                        <label for="comprador" required >Comprador</label>
 
                     </div>
                     <div class="form-check-compr">
@@ -151,11 +151,11 @@
                 </div>
                 <div class="form__password">
                     <label class="form__password__title" for="pass">Contraseña</label><br>
-                    <input type="password" name="pass" id="pass" placeholder="Introduzca su contraseña" required>
+                    <input type="password" name="pass" id="pass" placeholder="Introduzca su contraseña" required minlength="5" maxlength="10">
                 </div>
                 <div class="form__confirm">
                     <label class="form__confirm__title" for="pass">Confirmar contraseña</label>
-                    <input type="password" name="pass" id="pass" placeholder="Introduzca su contraseña nuevamente" required>
+                    <input type="password" name="pass" id="pass" placeholder="Introduzca su contraseña nuevamente" required minlength="5" maxlength="10">
                 </div>
                 <div class="contenedor_button" >
                     <button class="form__button" type="submit" >Borrar</button>
@@ -175,29 +175,29 @@
 
     </main>
 
-    <footer>
-        <section>
+    <footer class="footer">
+        <section class="section-paga">
             <div class="iconFooter"><i class="fa-solid fa-credit-card"></i></div>
             <h2>Pagá con tarjeta o en efectivo </i></h2>
-            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+            <p class="section-paga__p">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                 puntos de pago. ¡Y siempre es seguro!</p>
         </section>
         <section>
             <div class="iconFooter"><i class="fa-solid fa-gift"></i></div>
-            <h2>Envío gratis desde $ 2.500</h2>
-            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+            <h2 >Envío gratis desde $ 2.500</h2>
+            <p class="section-paga__p" >Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                 productos. Es un beneficio de Mercado Puntos.</p>
         </section>
         <section>
             <div class="iconFooter"><i class="fa-solid fa-user-shield"></i></div>
             <h2>Seguridad, de principio a fin</h2>
-            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+            <p class="section-paga__p" >¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
         </section>
         <br>
         <section>
 
-            <p class="copy">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+            <p class="section-paga__p" class="copy">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>
 
     </footer>
